--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "autoprefixer": "^9.1.5",
     "browser-sync": "^2.24.7",
     "cssnano": "^4.1.4",
-    "gulp": "github:gulpjs/gulp#4.0",
+    "gulp": "^4.0.0",
     "gulp-concat": "^2.6.1",
+    "gulp-minify-css": "^1.2.4",
     "gulp-postcss": "^8.0.0",
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4"
